--- a/WMPereiraJuniorHBrigo_PlanilhaResultados.ipynb
+++ b/WMPereiraJuniorHBrigo_PlanilhaResultados.ipynb
@@ -11,18 +11,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy in c:\\programdata\\anaconda3\\lib\\site-packages (1.18.5)\n",
+      "Requirement already satisfied: pandas in c:\\programdata\\anaconda3\\lib\\site-packages (1.0.5)\n",
+      "Requirement already satisfied: pytz>=2017.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (2020.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.6.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (2.8.1)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (1.18.5)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from python-dateutil>=2.6.1->pandas) (1.15.0)\n"
+     ]
+    }
+   ],
    "source": [
+    "!pip install numpy\n",
+    "!pip install pandas\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "from tkinter import filedialog"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +135,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "betaX = 0.06401870610209244\n",
+      "LN = 2.968867495484537\n",
+      "Mrd = 4910.557595413891\n"
+     ]
+    }
+   ],
    "source": [
     "# Dados relativos aos materiais\n",
     "fck = 30\n",
@@ -174,6 +198,7 @@
     "print('Mrd =',Mrd)\n",
     "\n",
     "caminho = input('Insira o caminho onde vc deseja salvar: ')\n",
+    "print(\"Exemplo de caminho C:\\\\Users\\\\Usuario\\\\Documents\\\\Downloads\\\\ ..Não é necessário colocar o nome do arquivo .xlsx\")\n",
     "testeMesa.to_excel (caminho+'Planilha de Resultados.xlsx')\n"
    ]
   },
