--- a/Trabalho3-viga1.ipynb
+++ b/Trabalho3-viga1.ipynb
@@ -24,41 +24,25 @@
     "    return area, linhaNeutra, inercia\n",
     "\n",
     "def propriedades_no_estadio_ii(h, bf, bw, hf, asTrac, asComp, alfa, d, dlinha):\n",
-    "#    print(h, bf, bw, hf, asTrac, asComp, alfa, d, dlinha)\n",
     "    if bf <= bw:\n",
     "        a1 = bw/2\n",
     "        a2 = hf*(bf - bw) + (alfa - 1)*asComp + alfa*asTrac\n",
     "        a3 = -dlinha*(alfa - 1)*asComp - d*alfa*asTrac - (hf**2)/2*(bf - bw)\n",
     "        linhaNeutra = (-a2 + np.sqrt(a2**2 - 4*a1*a3))/(2*a1)\n",
-    "#        print(\"if 1 a1 = \", a1)\n",
-    "#        print(\"if 1 a2 = \", a2)\n",
-    "#        print(\"if 1 a3 = \", a3)\n",
-    "#        print(\"if 1 x  = \", linhaNeutra)\n",
     "    elif bf > bw:\n",
     "        a1 = bf/2\n",
     "        a2 = hf*(0) + (alfa - 1)*asComp + alfa*asTrac\n",
     "        a3 = -dlinha*(alfa - 1)*asComp - d*alfa*asTrac - (hf**2)/2*(0)\n",
     "        linhaNeutra = (-a2 + (a2**2 - 4*a1*a3)**0.50)/(2*a1)\n",
-    "#        print(\"if 2 a1 = \", a1)\n",
-    "#        print(\"if 2 a2 = \", a2)\n",
-    "#        print(\"if 2 a3 = \", a3)\n",
-    "#        print(\"if 2 x  = \", linhaNeutra)\n",
     "        if linhaNeutra > hf:\n",
     "            a1 = bw/2\n",
     "            a2 = hf*(bf - bw) + (alfa - 1)*asComp + alfa*asTrac\n",
     "            a3 = -dlinha*(alfa - 1)*asComp - d*alfa*asTrac - (hf**2)/2*(bf - bw)\n",
     "            linhaNeutra = (-a2 + np.sqrt(a2**2 - 4*a1*a3))/(2*a1)    \n",
-    "#            print(\"if 3 a1 = \", a1)\n",
-    "#            print(\"if 3 a2 = \", a2)\n",
-    "#            print(\"if 3 a3 = \", a3)\n",
-    "#            print(\"if 3 x  = \", linhaNeutra)\n",
-    "#    print(linhaNeutra)\n",
     "    if linhaNeutra <= hf:\n",
     "        inercia = (bf*linhaNeutra**3)/3 + alfa*asTrac*(linhaNeutra - d)**2 + (alfa - 1)*asComp*(linhaNeutra - dlinha)**2\n",
-    "#        print(inercia)\n",
     "    else:\n",
     "        inercia = ((bf - bw)*hf**3)/12 + (bw*linhaNeutra**3)/3 + (bf - bw)*(linhaNeutra - hf/2)**2 + alfa*asTrac*(linhaNeutra - d)**2 + (alfa - 1)*asComp*(linhaNeutra - dlinha)**2\n",
-    "#        print(inercia)\n",
     "    return linhaNeutra, inercia"
    ]
   },
@@ -66,7 +50,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "46.375\n",
+      "3.25\n"
+     ]
+    }
+   ],
    "source": [
     "# Dados de entrada\n",
     "fck = 30\n",
@@ -92,7 +85,9 @@
     "alfaE = Es/Eci\n",
     "# Determinação das alturas úteis \n",
     "d = h - (cob + fiEstribo/10 + fiLongTrac/2/10)\n",
+    "print(d)\n",
     "dlinha = cob + fiEstribo/10 + fiLongComp/2/10 \n",
+    "print(dlinha)\n",
     "\n",
     "# Listas vazias para armazenamento e armazenamento dos valores iniciais\n",
     "curv = []\n",
@@ -339,13 +334,23 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 3273.131090457643, 3273.131090457643, 5323.211072802158, 5484.30723899702, 5692.70833333333]\n",
+      "[0, 2.592259712476471e-06, 3.7851869891349993e-05, 6.155986037935574e-05, 5.26706205590844e-5, 0.00168000000000000]\n"
+     ]
     }
    ],
    "source": [
     "plt.plot(curv, momt,'r--')\n",
     "plt.ylabel('Momento (kN.cm)', fontsize=15)\n",
     "plt.xlabel('$\\phi$ ($cm^{-1}$)', fontsize=15)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "print(momt)\n",
+    "print(curv)"
    ]
   }
  ],
